--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -2,6 +2,12 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@200;300;400;500;600;700&display=swap');
 
 :root {
+    --primary: #fe2c55;
+    --disable-text: #777777;
+    --background-search: rgba(22, 24, 35, 0.06);
+
+    --header-height: 60px;
+    --default-layout-width: 1150px;
 }
 
 * {
@@ -19,4 +25,9 @@ body {
     font-family: 'IBM Plex Sans', sans-serif;
     line-height: 1.5;
     text-rendering: optimizeSpeed;
+}
+
+input {
+    border: none;
+    outline: none;
 }
