--- a/src/components/Layouts/components/Header/Header.module.scss
+++ b/src/components/Layouts/components/Header/Header.module.scss
@@ -104,3 +104,8 @@
     position: absolute;
     right: calc(var(--width-btn-search) + 8px);
 }
+
+.right-inner {
+    display: flex;
+    align-items: center;
+}
