--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -4,6 +4,10 @@
 :root {
     --primary: #fe2c55;
     --disable-text: #777777;
+    --white: rgb(255, 255, 255);
+
+    --text-color: #333;
+    --black: rgb(0, 0, 0);
     --background-search: rgba(22, 24, 35, 0.06);
 
     --header-height: 60px;
@@ -27,7 +31,13 @@ body {
     text-rendering: optimizeSpeed;
 }
 
-input {
-    border: none;
+button,
+input,
+[tabindex] {
     outline: none;
+    border: none;
+}
+a {
+    color: var(--text-color);
+    text-decoration: none;
 }
