--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -3,7 +3,7 @@
     border-radius: 4px;
     border: none;
     min-width: 100px;
-    display: block;
+    display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
@@ -11,7 +11,7 @@
     background-color: var(--white);
     font-weight: 700;
     border: 1px solid transparent;
-    padding: 9px 16px;
+    padding: 6px 16px;
     user-select: none;
     + .wrapper {
         margin-left: 16px;
@@ -52,6 +52,10 @@
 .title + .icon,
 .icon + .title {
     margin-left: 8px;
+}
+
+.icon {
+    width: 24px;
 }
 
 .rounded {
