--- a/src/components/Layouts/components/Header/Header.module.scss
+++ b/src/components/Layouts/components/Header/Header.module.scss
@@ -129,7 +129,7 @@
     width: 30px;
     font-size: 1.6rem;
     margin-left: 8px;
-
+    cursor: pointer;
     // padding: 8px 16px;
     // font-size: ;
     // background-color: aqua;
