--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -1,7 +1,8 @@
+//header
 .menu-item {
     justify-content: flex-start;
     width: 100%;
-    font-weight: 500;
+    font-weight: 400;
     padding: 10px 16px;
     border-radius: 0;
     + .menu-item {
@@ -11,6 +12,33 @@
         background-color: rgba(22, 24, 35, 0.03);
     }
 }
+
+//index
 .menu-list {
     padding-bottom: 8px;
+}
+
+//header
+.header {
+    display: flex;
+    height: 50px;
+    align-items: center;
+    padding: 6px 12px;
+
+    svg {
+        display: block;
+        width: 30px;
+        text-align: center;
+    }
+
+    .header-title {
+        flex: 1;
+        font-size: 1.6rem;
+        font-weight: 600;
+        text-align: center;
+    }
+}
+
+.back-btn {
+    cursor: pointer;
 }
