--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -1,7 +1,7 @@
 //header
-.menu-item {
+.menu-item.important {
     justify-content: flex-start;
-    width: 100%;
+    width: 224px;
     font-weight: 400;
     padding: 10px 16px;
     border-radius: 0;
