user login header

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -43,6 +43,9 @@
     }
 }
 
+.separate {
+    border-top: 1px solid rgba(22, 24, 35, 0.12);
+}
 .text {
     &:hover {
         text-decoration: underline;
