--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -26,7 +26,7 @@ html {
 
 body {
     font-size: 1.6rem;
-    font-family: 'IBM Plex Sans', sans-serif;
+    font-family: 'Proxima-Nova', sans-serif;
     line-height: 1.5;
     text-rendering: optimizeSpeed;
 }
@@ -40,6 +40,28 @@ input,
 a {
     color: var(--text-color);
     text-decoration: none;
+}
+
+// fonts
+
+@font-face {
+    font-family: 'Proxima-Nova';
+    src: url('/assets/fonts/Proxima-Nova-Bold.woff');
+    font-weight: 700;
+}
+@font-face {
+    font-family: 'Proxima-Nova';
+    src: url('/assets/fonts/Proxima-Nova-Regular.woff2');
+    font-weight: 600;
+}
+@font-face {
+    font-family: 'Proxima-Nova';
+    src: url('/assets/fonts/ProximaNova-Semibold.woff2');
+    font-weight: 400;
+}
+@font-face {
+    font-family: 'sofiapro';
+    src: url('/assets/fonts/sofiapro-bold.woff2');
 }
 
 // tippy css
