--- a/src/components/Layouts/components/Header/Header.module.scss
+++ b/src/components/Layouts/components/Header/Header.module.scss
@@ -113,7 +113,8 @@
         border: 1px solid rgba(22, 24, 35, 0.12);
         border-radius: 2px;
         color: var(--text-color);
-        font-weight: 600;
+        padding: 6px 14px;
+        font-weight: 400;
         &:hover {
             border: 1px solid rgba(22, 24, 35, 0.12);
 
@@ -122,9 +123,11 @@
     }
 }
 .btn-left-user {
+    display: flex;
+    align-items: center;
+
     font-size: 2.2rem;
-    height: 26px;
-    width: 26px;
+    height: 100%;
     margin-left: 20px;
     cursor: pointer;
     color: rgba(22, 24, 35, 1);
@@ -134,6 +137,9 @@
     margin-left: 12px;
     padding-left: 4px;
     cursor: pointer;
+    top: 2px;
+    position: relative;
+
     img {
         width: 32px;
         height: 32px;
