add logic ui-search

--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -3,7 +3,7 @@
 
 :root {
     --primary: #fe2c55;
-    --disable-text: #777777;
+    --disable-text: rgba(22, 24, 35, 0.34);
     --white: rgb(255, 255, 255);
 
     --text-color: #333;
