--- a/src/components/Layouts/components/Header/Header.module.scss
+++ b/src/components/Layouts/components/Header/Header.module.scss
@@ -16,14 +16,15 @@
     width: var(--default-layout-width);
     display: flex;
     justify-content: space-between;
+    padding: 0 24px;
     align-items: center;
-    // flex: 1;
 }
 .logo {
-    height: var(--header-height);
-    padding: 4px;
+    align-items: center;
+    display: flex;
     img {
-        height: 100%;
+        height: 42px;
+        width: 118px;
     }
 }
 
@@ -93,7 +94,4 @@
     font-size: 1.6rem;
     margin-left: 8px;
     cursor: pointer;
-    // padding: 8px 16px;
-    // font-size: ;
-    // background-color: aqua;
 }
