--- a/src/Layouts/components/Search/Search.module.scss
+++ b/src/Layouts/components/Search/Search.module.scss
@@ -3,7 +3,6 @@
 .search {
     margin-left: 40px;
     height: var(--height-search);
-    // flex: 1;
     background-color: var(--background-search);
     display: flex;
     align-items: center;
@@ -14,10 +13,10 @@
         font-family: var(--font-primary);
         font-weight: 600;
         line-height: 22px;
-        // border: none;
         outline: none;
         background-color: transparent;
         padding: 12px 16px;
+        padding-right: 32px;
         font-size: 16px;
         flex: 1;
         caret-color: rgba(254, 44, 85, 1);
