--- a/src/Layouts/DefaultLayout/Default.module.scss
+++ b/src/Layouts/DefaultLayout/Default.module.scss
@@ -8,6 +8,7 @@
 
 .container {
     width: var(--default-layout-width);
+    max-width: 100%;
     display: flex;
     margin-top: var(--header-height);
 }
