--- a/src/Layouts/components/Sidebar/Sidebar.module.scss
+++ b/src/Layouts/components/Sidebar/Sidebar.module.scss
@@ -2,4 +2,80 @@
     width: 340px;
     padding-left: 12px;
     padding-top: 24px;
+    max-height: calc(100vh - var(--header-height));
+    overflow-y: overlay;
+
+    &:hover {
+        &::-webkit-scrollbar {
+            width: 4px;
+        }
+    }
+}
+
+.wrapper::-webkit-scrollbar {
+    border-radius: 0;
+    width: 0;
+}
+
+.wrapper::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(0, 0, 0, 0.15);
+}
+
+.wrapper::-webkit-scrollbar-track {
+    border-radius: 0;
+    background-color: rgba(0, 0, 0, 0);
+}
+
+.wrap-list {
+    display: flex;
+    flex-wrap: wrap;
+    padding-left: 8px;
+}
+
+.tag {
+    white-space: nowrap;
+    color: rgba(22, 24, 35, 0.75);
+    font-family: ProximaNova, Arial, Tahoma, PingFangSC, sans-serif;
+    font-weight: 400;
+    font-size: 1.4rem;
+    line-height: 18px;
+    padding-left: 6px;
+
+    margin-bottom: 12px;
+    height: 24px;
+    width: fit-content;
+    max-width: 100%;
+    margin-right: 8px;
+    box-shadow: unset;
+    svg {
+        width: 1.6rem;
+        fill: rgba(22, 24, 35, 1);
+    }
+    span {
+        max-width: 92%;
+        text-overflow: ellipsis;
+        overflow: hidden;
+    }
+
+    + .tag {
+        margin-left: 0;
+    }
+}
+
+.link {
+    min-width: fit-content;
+    padding: 0;
+    font-family: ProximaNova, Arial, Tahoma, PingFangSC, sans-serif;
+    font-weight: 600;
+    font-size: 1.2rem;
+    line-height: 17px;
+    display: inline-block;
+    margin-right: 6px;
+    margin-top: 5px;
+    color: rgba(22, 24, 35, 0.5);
+
+    + .link {
+        margin-left: 0;
+    }
 }
