--- a/src/components/Popper/PreviewAccount/Preview.module.scss
+++ b/src/components/Popper/PreviewAccount/Preview.module.scss
@@ -1,6 +1,3 @@
-.container {
-}
-
 .body {
     padding: 20px;
     width: 320px;
@@ -16,7 +13,7 @@
         display: flex;
         align-items: center;
         img {
-            height: 100%;
+            height: 44px;
             width: 44px;
             object-fit: cover;
             border-radius: 50%;
